--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "buildCommand": "echo 'Static frontend, no build needed'",
   "outputDirectory": "frontend",
-  "framework": "other"
+  "framework": "other",
+  "env": {
+    "BACKEND_URL": "@backend-url"
+  },
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "${BACKEND_URL}/:path*"
+    }
+  ]
 }
